Fix text-wrapping

--- a/api/css/style.css
+++ b/api/css/style.css
@@ -2,6 +2,7 @@ body
 {
 	font-size: 20px;
 	margin-top: 1%;
+	word-wrap: break-word;
 }
 
 h1
